v2016-04-29
  * all:
      重构了整套安装脚本
      现在升级配置自动执行install.sh -a

v2016-04-27.3
  * vim:
      这下真的不会备份~/.vim 了……

v2016-04-27.2
  * nvim:
      增加nvim 配置，与vim 共享配置

v2016-04-27
  * vim:
      现在启用插件color_coded
      现在YCM 与color_coded 公用一套clang
      解决了使用color_coded 时Vim 花屏的BUG
      修改了Vim 配置插件的逻辑，不再备份原有的~/.vim 目录
  * host:
      改了个IP

v2016-04-25
  * tmux:
      删除了一些不兼容新版的配置
  * grub2:
      补齐了需要的配置文件

v2016-04-24
  * grub2:
      增加了grub2 配置文件

v2016-04-22
  * bash & zsh:
      修正了一处archpkg 的逻辑错误
  * zsh:
      修改了一些oh-my-zsh 插件
  * vim:
      增加快捷键,s

v2016-04-19
  * bash & zsh:
      修改了alias
      修改了archpkg upgrade-all 时升级linux-header 的顺序（可能会引入问题）
  * hosts
      增加了个人vps

v2016-04-17
  * git:
      增加了GPG 签名的commit 和tag 别名

v2016-04-16.3
  * zsh:
      解决了fc 无法显示所有历史的问题
  * nano:
      同步了新版的语法高亮文件
  * tmux:
      修复了2.1 版本引入的的鼠标滚屏问题，默认配置不再兼容2.1 之前的版本
  * pacman:
      修改了archlinuxcn 源
  * tig:
      搜索时不再区分大小写

v2016-04-16.2
  * vim:
      重新试图与color_coded 共用一套clang
      使用vim-cpp-enhanced-highlight 插件暂时替代color_coded
      不再强制指定126 色以便在TTY 下使用

v2016-04-16
  * ssh:
      添加SSH 密钥对以做备份

v2016-04-15
  * all:
      更新了README.md
  * git:
      默认复制配置文件，不再使用链接
  * hosts:
      增加了hosts
  * iam:
      增加了iam 函数

v2016-04-12.2
  * all:
      更新了README.md
  * vim:
      允许加载YCM
      尝试自动解决YCM 对libtinfo 的依赖

v2016-04-12
  * bash & zsh:
      修改了alias
      修改了apply
  * vim:
      增删了几个插件
      不再与color_coded 共用一套clang
  * tig:
      所有模式下显示commit id

v2016-04-08.3
  * bash & zsh:
      将makepatch 函数修改为mkpatch
      修正了一些错误的帮助信息

v2016-04-08.2
  * all:
      增加了MIT-LICENSE
      修改了过时的README.md

v2016-04-08
  * bash & zsh:
      删除了diff 的别名
      增加了一套补丁工具

v2016-04-05
  * bash & zsh:
      修复了一处可能使所有终端都无法登陆的BUG

v2016-03-18
  * bash & zsh:
      archpkg 更新pkgfile 数据库时使用root 权限

v2016-03-17
  * vim:
      根据YCM 的改动修改了make 的参数

v2016-03-08
  * tig:
      增加tig 配置文件

v2016-02-24
  * bash & zsh:
      现在archpkg clean-system 时使用-Rsn 参数了

v2016-02-21