@@ -1,3 +1,8 @@
+v2016-04-29.2
+  * bash & zsh:
+      现在试图在虚拟化环境中自动登陆到tmux
+      增加了profile_reconf 函数
+
 v2016-04-29
   * all:
       重构了整套安装脚本
